--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,14 @@ spring.datasource.password=qwerty123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.file-size-threshold=10MB
+
+files.storage.path=C:\\Users\\lna42\\IdeaProjects\\GameGalaxy\\Storage\\images\\
 
 server.port=80
 
