add Storage for posters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.file-size-threshold=10MB
 
-#files.storage.path=Storage\\images\\
+#files.storage.path=C:\\Users\\lna42\\IdeaProjects\\GameGalaxy\\Storage\\images\\
 
-server.port=80
+server.port=5000
 
